HRA-388: Add athlete classification metrics to Settings
